Fixed content wrapped under navbar on extra-small displays

--- a/client/src/components/Experience/experience.css
+++ b/client/src/components/Experience/experience.css
@@ -34,13 +34,13 @@
     margin-bottom: 5dvh;
     color: #24292e !important;
 }
-@media screen and (min-width: 700px){
-    .experience-title{
+@media screen and (min-width: 700px) {
+    .experience-title {
         width: 40dvw;
     }
 }
-@media screen and (max-width: 700px){
-    .experience-title{
+@media screen and (max-width: 700px) {
+    .experience-title {
         width: 65dvw;
     }
 }
@@ -179,6 +179,11 @@
         min-width: 10dvw;
         max-width: 20dvw;
     }
+    .resume-button {
+        font-size: clamp(1dvw, 1.5dvw, 2dvw);
+
+        width: 35%;
+    }
 }
 @media screen and (max-width: 1024px) {
     .experience-object-logo {
@@ -196,6 +201,10 @@
         margin-left: auto;
         max-height: 15dvh;
         max-width: 20dvw;
+    }
+    .resume-button {
+        font-size: 1.25rem;
+        max-width: 80%;
     }
 }
 .experience-object-list {
@@ -244,10 +253,10 @@
     font-weight: bold;
     border-radius: 4px;
     transition: background-color 0.3s;
-    width: 30%;
     text-align: center;
-    height: 22.5%;
+    height: 30%;
+    text-decoration: none;
 }
-.salesforce-logo{
+.salesforce-logo {
     max-width: 50px !important;
 }
